--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -71,7 +71,7 @@ h2{
   }
 
 .about-main{
-  background:url(/assets/about-main-5d7831840429815fe86338dd0b2918a8.jpg) no-repeat center center;
+  background:url(/assets/about-main.jpg) no-repeat center center;
   background-size:cover;
   height:700px
   }
